# cold-usb

./: .env  .releaserc.json  LICENSE  README.md  mkosi.default  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: build-iso.yaml  build-release.yaml  release-iso.yaml
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/features/electrobun-migration/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
app/: package.json  pnpm-lock.yaml
app/src/: tailwind.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: error.rs  lib.rs  state.rs  types.rs
app/src-tauri/src/commands/: address.rs  mod.rs  qr.rs  transaction.rs  wallet.rs
app/src-tauri/src/crypto/: encryption.rs  keys.rs  mnemonic.rs  mod.rs
app/src-tauri/src/storage/: encrypted.rs  mod.rs  wallet_file.rs
app/src-tauri/src/wallet/: address.rs  hd.rs  mod.rs  psbt.rs
app/src/hooks/: useAutoLock.ts  useWindowFocus.ts
app/src/store/: uiStore.ts  walletStore.ts
app/src/types/: transaction.ts  wallet.ts
apps/desktop/: electrobun.config.ts  package.json  vite.config.ts
iso/: init.sh  mkosi.conf
iso/systemd/: wallet.service
mkosi/: .gitignore  build.bash  mkosi.conf  postoutput.bash
mkosi/mkosi.postinst.d/: 01-delete-network-drivers.chroot  02-setup-coldusb.chroot  02-setup-tauri-bin.chroot
mkosi/systemd/: wallet.service  weston.service
scripts/: build.sh  run.sh
wallet/: index.html  package.json
wallet/src/: App.css
wallet/src-tauri/: tauri.conf.json
(+47 files in other folders)
