[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bitcoin ecosystem
bitcoin = { version = "0.32", features = ["serde"] }
bip39 = "2.0"
miniscript = "13.0.0"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9.2"
zeroize = { version = "1.8", features = ["derive"] }

# QR & Encoding
qrcode = "0.14"
rqrr = "0.10.0"
image = "0.25"
hex = "0.4"
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
flate2 = "1.0"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"

